# LineBreakManifold

./: .gitignore  LICENSE  README.md  analyze_activations.py  colab.py  explore_dataset.py  gpt2_small_cell.py  linebreak_utils.py  pyproject.toml  save_activations.py  visualize_metadata.py
examples/: batch_loading_example.py  load_example.py  metadata_example.py
linebreak_data/: linebreak_width_100.txt  linebreak_width_105.txt  linebreak_width_110.txt  linebreak_width_115.txt  linebreak_width_120.txt  linebreak_width_125.txt  linebreak_width_130.txt  linebreak_width_135.txt  linebreak_width_140.txt  linebreak_width_145.txt  linebreak_width_15.txt  linebreak_width_150.txt  linebreak_width_20.txt  linebreak_width_25.txt  linebreak_width_30.txt  linebreak_width_35.txt  linebreak_width_40.txt  linebreak_width_45.txt  linebreak_width_50.txt  linebreak_width_55.txt  linebreak_width_60.txt  linebreak_width_65.txt  linebreak_width_70.txt  linebreak_width_75.txt  linebreak_width_80.txt  linebreak_width_85.txt  linebreak_width_90.txt  linebreak_width_95.txt
